# ChangeLog for dev-ruby/sass
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*sass-3.1.0_alpha_p252-r4 (06 Apr 2011)

  06 Apr 2011; Hans de Graaff <graaff@gentoo.org>
  +sass-3.1.0_alpha_p252-r4.ebuild:
  Use proper gem version to install the gem.

  06 Apr 2011; Hans de Graaff <graaff@gentoo.org>
  -sass-3.1.0_alpha_p252.ebuild, -sass-3.1.0_alpha_p252-r1.ebuild,
  -sass-3.1.0_alpha_p252-r2.ebuild, metadata.xml:
  Remove old versions.

*sass-3.1.0_alpha_p252-r3 (05 Apr 2011)

  05 Apr 2011; Hans de Graaff <graaff@gentoo.org>
  +sass-3.1.0_alpha_p252-r3.ebuild:
  And install init.rb

*sass-3.1.0_alpha_p252-r2 (05 Apr 2011)

  05 Apr 2011; Hans de Graaff <graaff@gentoo.org>
  +sass-3.1.0_alpha_p252-r2.ebuild:
  Also install VERSION_NAME.

*sass-3.1.0_alpha_p252-r1 (05 Apr 2011)

  05 Apr 2011; Hans de Graaff <graaff@gentoo.org>
  +sass-3.1.0_alpha_p252-r1.ebuild:
  Install VERSION file.

*sass-3.1.0_alpha_p252 (05 Apr 2011)

  05 Apr 2011; Hans de Graaff <graaff@gentoo.org>
  +sass-3.1.0_alpha_p252.ebuild, +metadata.xml:
  Initial import.
