@@ -2,14 +2,16 @@
 Hash: SHA256
 
 DIST sass-3.1.0.alpha.252.gem 207360 RMD160 9890d1af2fe266daa4c2d3bfb4f2f7251e207532 SHA1 a12baacc1d61e68bebce5baca2b67912925195e6 SHA256 b8691950c1023df50cc919e77b65832451a39af863a8a6e7b6af6a43e6f47c91
+DIST sass-3.1.0.alpha.253.gem 207360 RMD160 5b816e2d0b234eff2aa0b668257695987732d77a SHA1 0d39604f5eb85e6542d7d1d45c054631490fa4cd SHA256 db4a65ed5c26d0f58e33fd01ec482e4389cc87456d0b83433dc484bbe3f8fe71
 EBUILD sass-3.1.0_alpha_p252-r3.ebuild 862 RMD160 cf51aea4cc454fe1b50fb63a0536bbb9c36ce082 SHA1 36cc291226cd96cbd3b46afbb21482f71b22d595 SHA256 0430a4e6004957703bad8ead6356584625d4626445ffddc18de44a072def546a
 EBUILD sass-3.1.0_alpha_p252-r4.ebuild 918 RMD160 d9001126a43896ea956c807247c299ea8530d118 SHA1 9f13bde2393cceea6ba680e0bf2778f50af06864 SHA256 62f1e9ca4fdffcc87d83443d79d5bd56cfc72e6f94e0817b438d12cae1607d84
-MISC ChangeLog 1092 RMD160 be881bdb9aaa374713dc2c6d3518239564cd5bb4 SHA1 f50c01534915058de800f16dfbf09dc24c93eec1 SHA256 bc57a3e0d72dba36905aa2d1f69c297325c1990fe98febf8f283dd4ac0a3ec96
+EBUILD sass-3.1.0_alpha_p253.ebuild 918 RMD160 224c223d695df403b9c5938d6ed8d4816c179eb2 SHA1 957333f14d2196e83da3578fc3efef7369e9e55d SHA256 569e7733356dc9ea727737afeb60977c6f78c164fa989258c87086b12bf97abe
+MISC ChangeLog 1244 RMD160 74870beb882f5731a7712848a45333a56dc96ae5 SHA1 ba2160f6abc0de335ed68c9c29d14a1488552634 SHA256 ce9fd518627c5ae484a96d43cf4a92edaa7228b8dd0f43f89e8c3d603369db3e
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk2cLm4ACgkQrnu0mw69JkquNAD5AVwpe9p3tdEiddJLwB7Hzr0n
-oc4RhTL3wVNI4Hj1LekA/0q7me51JISeyxOEu5UEatXW+fVMJvBX9dqzmMDZI8bo
-=HNup
+iF4EAREIAAYFAk2oTjwACgkQrnu0mw69Jkr4SwD/fRAzBZHi3CDtPiObnwxCjAFQ
+sEa2TatGll4hC/mx67EA/0H7R/bLQ2dA52StPR4Qxv8TOxJ3/6Tm/0gcVM32dm5I
+=0Xx3
 -----END PGP SIGNATURE-----
