@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sass-3.1.0_alpha_p253 (15 Apr 2011)
+
+  15 Apr 2011; Hans de Graaff <graaff@gentoo.org>
+  +sass-3.1.0_alpha_p253.ebuild, metadata.xml:
+  Version bump.
+
 *sass-3.1.0_alpha_p252-r4 (06 Apr 2011)
 
   06 Apr 2011; Hans de Graaff <graaff@gentoo.org>
